Bug 936317 - Prevent MediaBufferDecoder threads from waiting after AudioContext shutdown(). r=ehsan, a=bajaj