content/media/webaudio/AudioContext.cpp
@@ -535,6 +535,8 @@ AudioContext::Shutdown()
 
   Suspend();
 
+  mDecoder.Shutdown();
+
   // Release references to active nodes.
   // Active AudioNodes don't unregister in destructors, at which point the
   // Node is already unregistered.
